[metadata]
name = MARLEnvs
version = 0.0.1
author = Ben Ellis
author_email = benellis@robots.ox.ac.uk
description = Some multi-agent RL Envs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benellis3/MARLEnvs
project_urls =
    Bug Tracker = https://github.com/benellis3/MARLEnvs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    numpy
    matplotlib
    opencv-python

[options.packages.find]
where = src
